--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Links</title>
     <link rel="stylesheet" href="style.css" />
@@ -28,7 +27,7 @@
                 <a href="public/Currículo Arthur Borges .pdf" target="_blank">Currículo</a>
             </li>
         </ul>
-        <footer>Feito com ❤︎ por Arthur Borges</footer>
+        <footer>Feito por Arthur Borges</footer>
     </div>
 </body>
 
