--- a/index.html
+++ b/index.html
@@ -2,139 +2,32 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arthur Borges</title>
-    <link rel="stylesheet" media="screen" href="style.css">
-    <script src="https://kit.fontawesome.com/4009e862ca.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Links</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <div class="container">
-        <div class="information-column">
-            <img src="images/IMG_9765.JPG" alt="Foto de Arthur Borges, homem de cabelo curto e preto sorrindo">
-            <h1>Arthur Borges</h1>
-            <h2>Estudante de programação</h2>
-            <hr>
-            <div class="contact-description">
-                <h3>Contato</h3>
-                <ul>
-
-                    <li>
-                        <a href="mailto:arthurbs2004@gmail.com" target="_blank">
-                            <i class="fa-solid fa-envelope"></i>arthurbs2004@gmail.com
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/BorgesArthur" target="_blank">
-                            <i class="fa-brands fa-github"></i>github.com/ArthurBorges
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/arthur-borges-5021b61b6" target="_blank">
-                            <i class="fa-brands fa-linkedin"></i>Arthur Borges
-                        </a>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-globe"></i>Gôiania - GO
-                    </li>
-
-                </ul>
-
-            </div>
-            <div class="education-description">
-                <h3>Educação</h3>
-                <ul>
-                    <li>
-                        <p>2023-2025</p>
-                        <h4>Análise e Desenvolvimento de Sistemas</h4>
-                        <h5>Pontifícia Universidade Católica de Goiás</h5>
-                    </li>
-                </ul>
-            </div>
-            <div class="language-description">
-                <h3>Línguas</h3>
-                <ul>
-                    <li>
-                        <h4>Português</h4>
-                        <div class="progress-bar-1"></div>
-                    </li>
-                    <li>
-                        <h4>Inglês</h4>
-                        <div class="progress-bar-2"></div>
-                    </li>
-                    <li>
-                        <h4>Francês</h4>
-                        <div class="progress-bar-3"></div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="experiences-column">
-            <section>
-                <h2>Sobre</h2>
-                <p>Gostaria de me apresentar como um entusiasta de tecnologia . Meu nome é Arthur Borges e tenho 19
-                    anos.
-                    Atualmente, estou estudando Análise e Desenvolvimento de Sistemas e meu grande objetivo é me tornar
-                    um
-                    programador de sucesso.
-
-                    Desde muito novo, sempre fui apaixonado por tecnologia e suas aplicações. Essa paixão me levou a
-                    escolher a área de TI como meu caminho profissional, com o intuito de contribuir para o
-                    desenvolvimento
-                    de soluções tecnológicas inovadoras. Acredito que a programação é uma ferramenta poderosa para
-                    transformar ideias em realidade e criar soluções que podem ajudar as pessoas e empresas.
-
-                    Acredito que a minha formação em Análise e Desenvolvimento de Sistemas e a minha paixão pela
-                    tecnologia
-                    e criatividade me tornam um forte candidato para a área de programação. Meu objetivo é contribuir
-                    para o
-                    sucesso da sua empresa, desenvolvendo soluções inovadoras e eficientes que atendam às necessidades
-                    dos
-                    seus clientes.
-
-                    Fico à disposição para esclarecer quaisquer dúvidas sobre minha experiência e qualificações.</p>
-            </section>
-            <section>
-                <h2>Expêriencias</h2>
-                <div class="experience">
-                    <div class="experience-date">
-                        <p>03/2021 - 12/2021</p>
-                        <p>(9 meses)</p>
-                    </div>
-                    <div>
-                        <h3>IQUEGO</h3>
-                        <h4>Jovem Aprendiz</h4>
-                        <p>Era responsável por fazer os despachos e ordens de pagamentos na área do financeiro, mas
-                            também
-                            já trabalhei na área de recursos humanos, administrava o sistema de ponto dos funcionários,
-                            lançamento dos atestados e etc.
-                            Já trabalhei na área de logística e era responsável pelas Notas fiscais. Devido a esta
-                            primeira
-                            experiência sei como funciona e como me comportar em um ambiemnte administrativo.</p>
-                    </div>
-
-                </div>
-            </section>
-            <section>
-                <h2>Projetos</h2>
-                <ul>
-                    <li>
-                        <h2>My Links</h2>
-                        <p>Site para centralizar meus links mais importantes em um só lugar. Desenvolvido com HTML e CSS
-                            no curso StepOne. Confira o resultado e o código fonte <a
-                                href="https://borgesarthur.github.io/my-links/" target="_blank">aqui</a></p>
-                    </li>
-                    <li>
-                        <h2>My CV</h2>
-                        </a>
-                        <p>Este site com o currículo online. Desenvolvido com HTML e CSS no curso StepOne. Confira o
-                            código fonte <a href="https://borgesarthur.github.io/My-CV/" target="_blank">aqui</a>.</p>
-                    </li>
-                </ul>
-            </section>
-            <footer>Feito por Arthur Borges</footer>
-        </div>
+        <img src="images/IMG_9765 copy.JPG" alt="Foto de Arthur,homem moreno de olhos castanhos." />
+        <h1>Arthur Borges</h1>
+        <p>Estudante de programação</p>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/arthur-borges-5021b61b6" target="_blank">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://github.com/BorgesArthur" target="_blank">GitHub</a>
+            </li>
+            <li>
+                <a href="mailto:arthurbs2004@gmail.com" target="_blank">E-mail</a>
+            </li>
+            <li>
+                <a href="public/Currículo Arthur Borges .pdf" target="_blank">Currículo</a>
+            </li>
+        </ul>
+        <footer>Feito por Arthur Borges</footer>
     </div>
 </body>
 
